--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pdt": "src/index.js"
   },
   "dependencies": {
+    "markdown-it": "^12.0.2",
     "prettier": "^2.2.0",
     "pug": "^3.0.0",
     "yargs": "^16.1.1"
