--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "markdown-it": "^12.0.2",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.0",
     "pug": "^3.0.0",
     "yargs": "^16.1.1"
