--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "preferGlobal": true,
   "scripts": {
-    "pdt": "node src/index.js"
+    "pdt": "node src/index.js",
+    "test": "mocha"
   },
   "bin": {
     "pdt": "src/index.js"
@@ -20,5 +21,8 @@
     "prettier": "^2.2.0",
     "pug": "^3.0.0",
     "yargs": "^16.1.1"
+  },
+  "devDependencies": {
+    "mocha": "^8.2.1"
   }
 }
