--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "command-exists": "^1.2.9",
     "markdown-it": "^12.0.2",
+    "mathjax-node-page": "^3.2.0",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.0",
     "pug": "^3.0.0",
