--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdt": "src/index.js"
   },
   "dependencies": {
+    "jsdom": "^16.4.0",
     "markdown-it": "^12.0.2",
     "mathjax-node-page": "^3.2.0",
     "node-sass": "^5.0.0",
