--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jsdom": "^16.4.0",
     "katex": "^0.12.0",
     "markdown-it": "^12.0.2",
-    "mathjax-node-page": "^3.2.0",
+    "mathjax-full": "^3.1.2",
     "node-sass": "^5.0.0",
     "pug": "^3.0.0",
     "puppeteer": "^5.5.0",
