--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "pdt": "node src/index.js",
     "format": "prettier -w src/ test/",
+    "lint": "eslint src",
     "test": "mocha"
   },
   "bin": {
@@ -26,6 +27,9 @@
     "yargs": "^16.1.1"
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.2.1",
     "prettier": "^2.2.0"
   }
