--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "jsdom": "^16.4.0",
     "markdown-it": "^12.0.2",
     "mathjax-full": "^3.1.2",
-    "node-sass": "^5.0.0",
     "pug": "^3.0.0",
     "puppeteer": "^5.5.0",
+    "sass": "^1.29.0",
     "yargs": "^16.1.1"
   },
   "devDependencies": {
