--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pmt",
-  "version": "0.1.0",
+  "name": "@jonpalmisc/pmt",
+  "version": "1.0.0",
   "description": "A robust solution for creating PDF media with Pug.",
   "main": "src/index.js",
   "repository": "https://github.com/jonpalmisc/pmt",
