--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jonpalmisc/pmt",
-  "version": "1.2.0",
+  "version": "1.3.0-dev.0",
   "description": "A robust solution for creating PDF media with Pug.",
   "main": "src/index.js",
   "repository": "https://github.com/jonpalmisc/pmt",
